--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3",
