--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
+    "mock.js": "^0.2.0",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "swiper": "^5.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
